671 - Add a 96-hour trigger for post-event email